@@ -1,3 +1,23 @@
-EBUILD emacs-updater-9999.ebuild 690 RMD160 1715ae511e0b81dfdd8f1dad77f97facc2b0f3a8 SHA1 34f6c4b834a02d0aa8236984df26ef2fdc64ed47 SHA256 8119d5ba0a87d458a668da5a3d40a484f28088b9faeb9f75a5cfb9099e4dd425
-MISC ChangeLog 954 RMD160 60755bc9af3a93a0db3e1d4038bfd0e545178958 SHA1 6e2775e93448cf7d50d131e1f79bea7135fbad2c SHA256 67050e649d44b8f00cb7fd7795e35a3fd744f66cce8bd8af91e2a433db3c0351
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+EBUILD emacs-updater-9999.ebuild 911 RMD160 75cac2c6bb93d3bc65ffd37f31c7c5c7281a0f19 SHA1 1a93211fd4f2fcbbb7b6809c2ff57710e19aa7c2 SHA256 7bdb7e43a87e05d8e5e3df673cb31a26a712b87aeb6c438e06ea64a78172c147
+MISC ChangeLog 1095 RMD160 6679051ab5dfe3f771670b8da278a1928aab31d2 SHA1 33c8ee684dad1a27b68dff82f2830db1a25e93eb SHA256 73f379adc690b808a50b4e2ca260dbeb7630df264a9cfe8329b92531d02e785e
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBAgAGBQJP01I2AAoJEDxpGckxwJCBexEP/3LL0hM5b8kq17BnevDg/a1M
+dzP8IvjYQoAJHg+m5W8YsiggV+xBp3GcnrwN2AUVCCSDIMovX2RbRp4paDLXFVjr
+yOPuLHcRpSBj7/zpOGmiRKm3dAWfeiWnw6eDW/m2cPIpALTpssP/AM86HMekcsFr
+uW+xX4e4w/nWlRiYUMwwFFRJTY5AGf8oNE3rRprJ+0RtdjQqbVgzLj7klIdrzwe4
+N3aV09PcAOwetrWy4SDLzGuK6oQ3Ic2QCvooPK7NQxnZyDmMP2EOjq8mnzdlIIyo
+KCs7kFPUQfHE8bejLfXccfgsDQoVM/0ttap7CSDLUcfbDh+czbY6jlvekQ8pazwZ
+3x49FVyYXl7/307BHsbG4c9vekHfA4v8OGiWi4WDsd7BdIehFsvNXtpxLv7oeco5
+Gbh3ySLvyNRnegmaxihlWVRmni8o00sffaQdk9KArh6p4c5kR3TO8ACD7icZD8Fb
+OkCtQV0dKIOypR6xEGzb76pPBDDi88R56BKSp6eUYNm4npP+5rIJoi0/WXdhLkN9
+oqZc1nrPuhi3SKEDhKOZjK+jWuNLeJwfuzkVgWqMBAEmVEWMv0AzWWtiNGmDjRHK
+ZfpwL2CkSdH3BonBr+qnVSNiUHQ5W2uRWHofxfAKzjtGWmKeF3fu6+7YresdgOZB
+9gVcBiotERNTxWffdoOU
+=XCzt
+-----END PGP SIGNATURE-----
